Issue #26932: Fixed support of RTLD_* constants defined as enum values, not via macros (in particular on Android).  Patch by Chi Hsuan Yen.